# Blue-and-Pink-Synth-Editor-RPi

./: .gitignore  BlueAndPinkSynthEditor.desktop  BlueAndPinkSynthEditor.spec  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/blue_and_pink_synth_editor/: BlueAndPinkSynthEditorApp.py  app_config.ini  blueandpinksyntheditor.kv  error_dialog.py  load_dialog.py  misc_widgets.py  save_dialog.py
src/blue_and_pink_synth_editor/ui_controls/: amp_reverb_section_screen.kv  bottom_bar.kv  bottom_bar.py  chords_screen.py  error_dialog.py  filter_section_screen.kv  left_bar.kv  left_bar.py  lfo_section_screen.kv  load_dialog.py  misc_widgets.py  oscillator_section_screen.kv  params_grid_lfo_config_cell.kv  params_grid_lfo_config_cell.py  params_grid_mod_cell.py  params_grid_non_mod_cell.kv  params_grid_non_mod_cell.py  preset_load_screen.kv  preset_save_screen.kv  save_dialog.py  settings_screen.kv  settings_screen.py  synth_editor_value_controls.py  top_bar.kv  top_bar.py
