[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BlueAndPinkSynthEditor for Raspberry Pi"
version = "0.2.5-beta"
description = "A Dreadbox Nymphes Software Editor for Raspberry Pi!"
readme = "README.md"
authors = [{name = "Scott Lumsden", email = "jtpack@gmail.com"}]
license = { file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["MIDI", "OSC", "Nymphes"]
dependencies = [
    "python-osc",
    "netifaces",
    "kivy[base]",
    "zeroconf",
    "pyinstaller"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/jtpack/Blue-and-Pink-Synth-Editor-RPi"
